--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,17 @@
+.active {
+  font-weight: 600;
+}
+
 .hero {
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   height: 130px;
+  background-color: var(--color-5);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+  z-index: 1;
 }
 
 .hero__container {
@@ -20,15 +28,16 @@
   display: flex;
 }
 
+.list li:nth-child(-n + 2) {
+  padding-left: 20px;
+  margin-right: 60px;
+}
+
 .list__item {
+  cursor: pointer;
   font-size: 1.5rem;
   text-transform: uppercase;
   color: var(--color-1);
-  list-style: none;
-}
-
-.list__item:nth-child(-n + 2) {
-  margin-right: 80px;
 }
 
 .main {
@@ -36,6 +45,7 @@
   justify-content: center;
   background-color: var(--color-6);
   min-height: 100vh;
+  margin-top: 130px;
 }
 
 .main__container {
@@ -55,4 +65,40 @@
   width: 100%;
   height: 8px;
   background: linear-gradient(to right, var(--color-2) 0%, var(--color-3) 100%);
+}
+
+.galery {
+  margin: 50px 0 800px 0;
+  display: grid;
+  justify-items: center;
+  grid-column-gap: 35px;
+  grid-row-gap: 35px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: row;
+}
+
+.galery__item {
+  display: inline-block;
+  position: relative;
+}
+
+.galery__text {
+  position: absolute;
+  top: 300px;
+  left: 25px;
+  font-size: 2.5rem;
+  color: var(--color-5);
+}
+
+.galery__img {
+  -webkit-mask-image: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.836) 0%,
+    rgb(255, 255, 255) 100%
+  );
+  mask-image: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.836) 0%,
+    rgb(255, 255, 255) 100%
+  );
 }
